# rocket-cash

./: .gitignore  README.md
rc-server/: Cargo.toml
rc-server/migrations/20230706154700_create_balances_table/: down.sql  up.sql
rc-server/migrations/20230713120000_create_transfers_table/: down.sql  up.sql
rc-server/src/: balance.rs  main.rs  transfer.rs
rc-server/static/templates/: base.html.tera  index.html.tera  login.html.tera  logout.html.tera  signup.html.tera  user.html.tera
