[package]
name = "rc-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rocket = "=0.5.0-rc.3"
rocket_auth = { git = "https://github.com/aaronbassett/rocket_auth", features = [
    "sqlx-sqlite",
] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls"] }
chrono = "0.4.26"


[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]

[dependencies.tokio]
version = "1.19.2"
features = ["rt", "rt-multi-thread"]
